samples/_failures_safe/1761600135_9ad510_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab640352.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_ab640352.c:175:29: error: expected ‘)’ at end of input
  175 |         if (op == TOKEN_PLUS
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_ab640352.c:175:9: error: expected declaration or statement at end of input
  175 |         if (op == TOKEN_PLUS
      |         ^~
./samples/SAFE/__tmp_ab640352.c:175:9: error: expected declaration or statement at end of input
